previous Arm code that also follows the AAPCS when I am looking for some
prior set precedent.


For reference, here is the AAPCS:

AAPCS - Procedure Call Standard for the Arm Architecture
============================================================
Reg | Synonym  | AAPCS Role
------------------------------------------------------------
r0  |   a1     | Argument 1 / Scratch Register / Result
r1  |   a2     | Argument 2 / Scratch Register / Result
r2  |   a3     | Argument 3 / Scratch Register
r3  |   a4     | Argument 4 / Scratch Register
r4  | * v1     | Variable Register 1
r5  | * v2     | Variable Register 2
r6  | * v3     | Variable Register 3
r7  | * v4     | Variable Register 4
r8  | * v5     | Variable Register 5
r9  | v6/SB/TR | Platform Register, defined by platform standard
r10 | * v7     | Variable Register 7
r11 | * FP/v8  | Frame Pointer or Variable Register 8
r12 |   IP     | The Intra-Procedure-Call Scratch Register
r13 | * SP     | The Stack pointer (full descending stack)
r14 |   LR     | The Link Register (Return Address)
r15 |   PC     | The Program Counter (Current Instruction)
------------------------------------------------------------

Uppercase register names are when they have a fixed role, else lowercase.

Registers r0 to r7 are named the Low Registers.
Registers r13 to r15 are named the High Registers.
(Some references name r8 - r15 as the High Registers).

A subroutine must preserve the contents of the registers r4-r8, r10, r11,
and SP (and r9 in PCS variants that designate r9 as v6).

So I have determined to use an array of eleven longs for label_t, for the
registers r4-r14 (v1-v8, IP, SP, LR). If this is wrong, then I will adjust
later on. More is better than less.

I have stumbled upon issues to deal with for exception handling, in regards
to which registers to save. That will be dealt with later on.

I will commit this for now. I have also added the AAPCS to a new "arm"
resources directory.