@@ -1,0 +1,9 @@
+MEMORY
+{
+	FLASH (r x) : ORIGIN = 0x08000000, LENGTH = 1024K
+	RAM   (rwx) : ORIGIN = 0x20000000, LENGTH = 128K
+}
+
+ENTRY(Reset_Handler)
+
+_estack = 0x20020000;
